--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -1,3 +1,5 @@
+/*
+
 @font-face {
     font-family: "OrelegaOne";
     font-style: normal;
@@ -18,6 +20,7 @@
     src: url('../../assets/fonts/Montserrat-SemiBold.ttf') format("truetype");
     font-display: swap;
 }
+*/
 
 body {
     font-family: 'Montserrat-Regular';
