--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -44,7 +44,30 @@
     }
     header {
         padding: 12px 0;
+        line-height: 24.8px;
         display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .navbarIcon {
+        font-size: 7vw;
+        img {
+            display: none;
+        }
+    }
+    ul {
+        display: block;
+        line-height: 24.8px;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        li {
+            display: inline-block;
+            margin: 0 0.25rem;
+            a {
+                padding: 0.5rem 0.75rem;
+            }
+        }
     }
     .btnnavclose,
     .btnnavopen,
