--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -121,3 +121,17 @@
         }
     }
 }
+
+details {
+    ul {
+        background: var(--beige);
+        position: absolute;
+        box-shadow: 0px 0px 5px black;
+        width: 250px;
+        margin-left: -133px !important;
+        li {
+            width: 100%;
+            padding: 5px 0;
+        }
+    }
+}
