--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -1,14 +1,20 @@
 .card {
-    background: red;
-    width: 33%;
+    background: white;
+    width: 30%;
+    text-align: center;
+    padding: 5px;
+    margin: 5px 0;
     img {
         width: 100%;
     }
     div {
         display: flex;
         text-align: center;
-        background: chartreuse;
         margin: 0 25px;
         justify-content: center;
+    }
+    .icon {
+        width: 24px;
+        margin-left: 8px;
     }
 }
