--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -1,5 +1,6 @@
 .card {
-    background: white;
+    background: var(--beige);
+    box-shadow: 0px 0px 3px var(--gray);
     width: 30%;
     text-align: center;
     padding: 5px;
