--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -4,9 +4,11 @@
     width: 30%;
     text-align: center;
     padding: 5px;
-    margin: 5px 0;
+    margin: 15px 0;
     img {
         width: 100%;
+        height: 80%;
+        object-fit: cover;
     }
     div {
         display: flex;
@@ -16,6 +18,7 @@
     }
     .icon {
         width: 24px;
-        margin-left: 8px;
+        object-fit: contain;
+        margin: auto 0 auto 8px;
     }
 }
