--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -5,7 +5,7 @@
     text-align: center;
     padding: 5px;
     margin: 15px 0;
-    img {
+    .mainpic {
         width: 100%;
         height: 80%;
         object-fit: cover;
@@ -15,10 +15,15 @@
         text-align: center;
         margin: 0 25px;
         justify-content: center;
+        flex-wrap: wrap;
     }
     .icon {
         width: 24px;
         object-fit: contain;
         margin: auto 0 auto 8px;
+    }
+    p {
+        margin: 0;
+        margin-top: -15px;
     }
 }
