--- a/src/assets/styles/champions.module.scss
+++ b/src/assets/styles/champions.module.scss
@@ -3,4 +3,9 @@
         font-size: 50px;
         text-align: center;
     }
+    .flex {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
 }
