--- a/src/components/champions-card/champions-card.module.scss
+++ b/src/components/champions-card/champions-card.module.scss
@@ -3,11 +3,18 @@
     text-align: center;
     width: 500px;
     height: auto;
-    border: 1px solid black;
+    margin-bottom: 30px;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.178);
+    border-radius: 10px;
     .mainpic {
         background-color: var(--brun);
+        border-radius: 0px;
+        margin-top: 1em;
     }
     div {
+        h3 {
+            margin: 1em;
+        }
         p {
             margin: 1em;
             text-align: left;
