--- a/src/assets/styles/album.module.scss
+++ b/src/assets/styles/album.module.scss
@@ -1,5 +1,12 @@
 @media only screen and (max-width: 575px) {
     .album {
+        text-align: center;
+        h1 {
+            font-size: 2em;
+        }
+        p {
+            font-size: 1em;
+        }
         img {
             width: 100%;
         }
@@ -8,8 +15,36 @@
 
 @media only screen and (min-width: 576px) {
     .album {
-        img {
-            max-width: 500px;
+        text-align: center;
+        h1 {
+            font-size: 3em;
+        }
+        p {
+            font-size: 2em;
+        }
+        .grid {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: center;
+            img {
+                height: 40%;
+                width: 30%;
+                object-fit: cover;
+                object-position: top;
+                border-radius: 15px;
+                margin: 1em;
+                box-shadow: 0 0 15px rgba(0, 0, 0, 0.295);
+            }
+             :nth-child(3n+1) {
+                order: 1;
+            }
+             :nth-child(3n+2) {
+                order: 2;
+            }
+             :nth-child(3n) {
+                order: 3;
+            }
         }
     }
 }
