--- a/src/components/chiens/chiens.module.scss
+++ b/src/components/chiens/chiens.module.scss
@@ -22,8 +22,8 @@
         justify-content: space-between;
         margin-top: 60px;
         button {
-            padding: 2em 3em;
-            border-radius: 50%;
+            padding: 1em 3em;
+            border-radius: 50px;
             font-size: 1.2em;
             font-weight: 600;
             background: var(--brun);
