--- a/src/assets/styles/album.module.scss
+++ b/src/assets/styles/album.module.scss
@@ -34,7 +34,7 @@
                 object-position: top;
                 border-radius: 15px;
                 margin: 1em;
-                box-shadow: 0 0 15px rgba(0, 0, 0, 0.295);
+                box-shadow: 0 0 6px var(--shadow);
             }
              :nth-child(3n+1) {
                 order: 1;
