--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -1,14 +1,16 @@
 .card {
     background: var(--beige);
-    box-shadow: 0px 0px 3px var(--gray);
+    box-shadow: 0px 0px 15px var(--shadow);
     width: 30%;
     text-align: center;
     padding: 5px;
     margin: 15px 0;
+    border-radius: 1em;
     .mainpic {
         width: 100%;
         height: 80%;
         object-fit: cover;
+        border-radius: 1em 1em 0 0;
     }
     div {
         display: flex;
