--- a/src/components/chiens/chiens.module.scss
+++ b/src/components/chiens/chiens.module.scss
@@ -3,6 +3,7 @@
     border-radius: 15px;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.178);
     display: flex;
+    margin-bottom: 2em;
     img {
         width: 50%;
         border-radius: 15px 0 0 15px;
@@ -21,6 +22,7 @@
         display: flex;
         justify-content: space-between;
         margin-top: 60px;
+        margin-bottom: 1em;
         button {
             padding: 1em 3em;
             border-radius: 50px;
