--- a/src/assets/styles/album.module.scss
+++ b/src/assets/styles/album.module.scss
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 575px) {
+@media only screen and (max-width: 723px) {
     .album {
         text-align: center;
         h1 {
@@ -9,11 +9,49 @@
         }
         img {
             width: 100%;
+            box-shadow: 0 0 6px var(--shadow);
+            border-radius: 15px;
+            margin: 0 0 1em 0;
         }
     }
 }
 
-@media only screen and (min-width: 576px) {
+@media (min-width: 723px) and (max-width: 1086px) {
+    .album {
+        text-align: center;
+        h1 {
+            font-size: 2em;
+        }
+        p {
+            font-size: 1em;
+        }
+        .grid {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: center;
+            img {
+                width: 45%;
+                object-fit: cover;
+                object-position: top;
+                border-radius: 15px;
+                margin: 1em;
+                box-shadow: 0 0 6px var(--shadow);
+            }
+             :nth-child(3n+1) {
+                order: 1;
+            }
+             :nth-child(3n+2) {
+                order: 2;
+            }
+             :nth-child(3n) {
+                order: 3;
+            }
+        }
+    }
+}
+
+@media only screen and (min-width: 1087px) {
     .album {
         text-align: center;
         h1 {
