--- a/src/assets/styles/pedigree.module.scss
+++ b/src/assets/styles/pedigree.module.scss
@@ -5,6 +5,8 @@
     background: var(--beige);
     box-shadow: 0 0 6px var(--shadow);
     border-radius: 15px;
+    padding: 0 1em;
+    gap: 1em;
     h1 {
         grid-column: span 4;
         text-align: center;
@@ -20,9 +22,16 @@
         text-align: center;
         margin: auto;
     }
-    p:nth-of-type(1) {
+    .nametag:nth-of-type(3) {
+        background: chartreuse;
+        height: 100%;
+        width: 100%;
+        margin: auto;
+    }
+     :nth-of-type(5) {
         background: red;
         width: 100%;
         height: 100%;
+        margin: auto;
     }
 }
