--- a/src/components/card/card.module.scss
+++ b/src/components/card/card.module.scss
@@ -6,6 +6,7 @@
     padding: 5px;
     margin: 15px 0;
     border-radius: 1em;
+    height: max-content;
     .mainpic {
         width: 100%;
         height: 80%;
