--- a/src/assets/pagestyles/contact.module.scss
+++ b/src/assets/pagestyles/contact.module.scss
@@ -1,9 +1,9 @@
 .contact {
     text-align: center;
     iframe {
-        width: 100%;
-        margin: 1em 0;
-        height: 500px;
+        width: 600px;
+        margin: 1em 5em;
+        height: 450px;
     }
     .link {
         width: 100%;
@@ -11,5 +11,14 @@
     }
     img {
         max-width: 100%;
+    }
+}
+
+@media (min-width: 0px) and (max-width: 866px) {
+    .contact {
+        iframe {
+            margin: 1em 0;
+            width: 100%;
+        }
     }
 }
