--- a/src/assets/pagestyles/chiots.module.scss
+++ b/src/assets/pagestyles/chiots.module.scss
@@ -28,3 +28,12 @@ h2 {
         width: 100%;
     }
 }
+
+@media only screen and (max-width: 575px) {
+    .contact {
+        a {
+            width: 100%;
+            font-size: 1em;
+        }
+    }
+}
