--- a/src/assets/pagestyles/couleurs.module.scss
+++ b/src/assets/pagestyles/couleurs.module.scss
@@ -12,4 +12,16 @@
         padding: 1em;
         box-shadow: 0 0 6px var(--shadow);
     }
+    .line {
+        display: flex;
+        max-width: 100%;
+    }
+    .icon {
+        margin: 1em;
+        text-align: center;
+        width: fit-content;
+        p {
+            margin: 0;
+        }
+    }
 }
