--- a/src/assets/pagestyles/chiots.module.scss
+++ b/src/assets/pagestyles/chiots.module.scss
@@ -29,6 +29,10 @@ h2 {
     }
 }
 
+.center {
+    text-align: center;
+}
+
 @media only screen and (max-width: 575px) {
     .contact {
         a {
