--- a/src/assets/styles/pedigree.module.scss
+++ b/src/assets/styles/pedigree.module.scss
@@ -97,3 +97,19 @@
         font-size: 1.5vw;
     }
 }
+
+@media print {
+    .pedigree {
+        transform: rotate(0deg);
+        padding: 0;
+        margin: 0;
+        gap: 0;
+        box-shadow: 0;
+        .nametag {
+            padding: 0.5em;
+        }
+        p {
+            margin: 0;
+        }
+    }
+}
