--- a/src/components/champions-card/champions-card.module.scss
+++ b/src/components/champions-card/champions-card.module.scss
@@ -40,6 +40,7 @@
             background-color: var(--brun);
             border-radius: 0px;
             margin-top: 1em;
+            width: 100%;
         }
         div {
             h3 {
@@ -66,6 +67,7 @@
             background-color: var(--brun);
             border-radius: 0px;
             margin-top: 1em;
+            width: 100%;
         }
         div {
             h3 {
