--- a/src/assets/pagestyles/chiots.module.scss
+++ b/src/assets/pagestyles/chiots.module.scss
@@ -33,6 +33,18 @@ h2 {
     text-align: center;
 }
 
+.babys {
+    p {
+        text-align: center;
+    }
+    img {
+        width: 100%;
+        margin: 1em 0;
+        border-radius: 15px;
+        box-shadow: 0 0 6px var(--shadow);
+    }
+}
+
 @media only screen and (max-width: 575px) {
     .contact {
         a {
